--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/move_activity"
-     />
+        />
 
     <Button
         android:id="@+id/btn_move_activity_data"
@@ -23,4 +23,11 @@
         android:text="@string/move_with_data"
         />
 
+    <Button
+        android:id="@+id/btn_move_activity_object"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/move_with_object"
+        />
 </LinearLayout>
